[package]
name = "core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = { version = "0.22.1" }

[dependencies]
bitcoin = "0.32.5"
clap = { version = "4.5.44", features = ["derive"] }
hex = "0.4.3"
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
logos = "0.15.0"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
