[package]
name = "bithoven"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
lalrpop = { version = "0.22.1" }

[dependencies]
bitcoin = "0.32.5"
clap = { version = "4.5.44", features = ["derive"] }
hex = "0.4.3"
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
logos = "0.15.0"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6.5"
regex = "1.11.2"
lazy_static = "1.5.0"
js-sys = "0.3.81"
